--- a/roles/kernel-sysctl-tweak/tasks/uninstall.yml
+++ b/roles/kernel-sysctl-tweak/tasks/uninstall.yml
@@ -14,106 +14,127 @@
 # ---------------------------------------------------------------------------------------------------------------------
 
 - name: sysctl | CLEAR/RESET fs.file-max
+  become: true
   sysctl:
     name: fs.file-max
     state: absent
 
 - name: sysctl | CLEAR/RESET vm.swappiness
+  become: true
   sysctl:
     name: vm.swappiness
     state: absent
 
 - name: sysctl | CLEAR/RESET vm.dirty_ratio
+  become: true
   sysctl:
     name: vm.dirty_ratio
     state: absent
 
 - name: sysctl | CLEAR/RESET vm.dirty_background_ratio
+  become: true
   sysctl:
     name: vm.dirty_background_ratio
     state: absent
 
 - name: sysctl | CLEAR/RESET vm.mmap_min_addr
+  become: true
   sysctl:
     name: vm.mmap_min_addr
     state: absent
 
 - name: sysctl | CLEAR/RESET kernel.sched_migration_cost_ns
+  become: true
   sysctl:
     name: kernel.sched_migration_cost_ns
     state: absent
 
 - name: sysctl | CLEAR/RESET kernel.randomize_va_space
+  become: true
   sysctl:
     name: kernel.randomize_va_space
     state: absent
 
 - name: sysctl | CLEAR/RESET kernel.kptr_restrict
+  become: true
   sysctl:
     name: kernel.kptr_restrict
     state: absent
 
 - name: sysctl | CLEAR/RESET kernel.dmesg_restrict
+  become: true
   sysctl:
     name: kernel.dmesg_restrict
     state: absent
 
 - name: sysctl | CLEAR/RESET kernel.yama.ptrace_scope
+  become: true
   sysctl:
     name: kernel.yama.ptrace_scope
     state: absent
 
 - name: sysctl | CLEAR/RESET net.ipv4.tcp_synack_retries
+  become: true
   sysctl:
     name: net.ipv4.tcp_synack_retries
     state: absent
 
 - name: sysctl | CLEAR/RESET net.ipv4.tcp_syn_retries
+  become: true
   sysctl:
     name: net.ipv4.tcp_syn_retries
     state: absent
 
 - name: sysctl | CLEAR/RESET net.ipv4.ip_local_port_range
+  become: true
   sysctl:
     name: net.ipv4.ip_local_port_range
     state: absent
 
 - name: sysctl | CLEAR/RESET net.ipv4.tcp_rfc1337
+  become: true
   sysctl:
     name: net.ipv4.tcp_rfc1337
     state: absent
 
 - name: sysctl | CLEAR/RESET net.ipv4.tcp_syncookies
+  become: true
   sysctl:
     name: net.ipv4.tcp_syncookies
     state: absent
 
 - name: sysctl | CLEAR/RESET net.ipv4.tcp_fin_timeout
+  become: true
   sysctl:
     name: net.ipv4.tcp_fin_timeout
     state: absent
 
 - name: sysctl | CLEAR/RESET net.ipv4.tcp_keepalive_time
+  become: true
   sysctl:
     name: net.ipv4.tcp_keepalive_time
     state: absent
 
 - name: sysctl | CLEAR/RESET net.ipv4.tcp_keepalive_probes
+  become: true
   sysctl:
     name: net.ipv4.tcp_keepalive_probes
     state: absent
 
 - name: sysctl | CLEAR/RESET net.ipv4.tcp_keepalive_intvl
+  become: true
   sysctl:
     name: net.ipv4.tcp_keepalive_intvl
     state: absent
 
 - name: sysctl | CLEAR/RESET net.netfilter.nf_conntrack_tcp_loose
+  become: true
   sysctl:
     name: net.netfilter.nf_conntrack_tcp_loose
     state: absent
 
 - name: sysctl | CLEAR/RESET net.ipv4.tcp_max_orphans
+  become: true
   sysctl:
     name: net.ipv4.tcp_max_orphans
     state: absent
@@ -123,86 +144,103 @@
 # ---------------------------------------------------------------------------------------------------------------------
 
 - name: sysctl | CLEAR/RESET net.core.rmem_default
+  become: true
   sysctl:
     name: net.core.rmem_default
     state: absent
 
 - name: sysctl | CLEAR/RESET net.core.rmem_max
+  become: true
   sysctl:
     name: net.core.rmem_max
     state: absent
 
 - name: sysctl | CLEAR/RESET net.core.wmem_default
+  become: true
   sysctl:
     name: net.core.wmem_default
     state: absent
 
 - name: sysctl | CLEAR/RESET net.core.wmem_max
+  become: true
   sysctl:
     name: net.core.wmem_max
     state: absent
 
 - name: sysctl | CLEAR/RESET net.core.somaxconn
+  become: true
   sysctl:
     name: net.core.somaxconn
     state: absent
 
 - name: sysctl | CLEAR/RESET net.core.netdev_max_backlog
+  become: true
   sysctl:
     name: net.core.netdev_max_backlog
     state: absent
 
 - name: sysctl | CLEAR/RESET net.ipv4.tcp_max_syn_backlog
+  become: true
   sysctl:
     name: net.ipv4.tcp_max_syn_backlog
     state: absent
 
 - name: sysctl | CLEAR/RESET net.core.optmem_max
+  become: true
   sysctl:
     name: net.core.optmem_max
     state: absent
 
 - name: sysctl | CLEAR/RESET net.ipv4.tcp_mem
+  become: true
   sysctl:
     name: net.ipv4.tcp_mem
     state: absent
 
 - name: sysctl | CLEAR/RESET net.ipv4.udp_mem
+  become: true
   sysctl:
     name: net.ipv4.udp_mem
     state: absent
 
 - name: sysctl | CLEAR/RESET net.ipv4.tcp_rmem
+  become: true
   sysctl:
     name: net.ipv4.tcp_rmem
     state: absent
 
 - name: sysctl | CLEAR/RESET net.ipv4.udp_rmem_min
+  become: true
   sysctl:
     name: net.ipv4.udp_rmem_min
     state: absent
 
 - name: sysctl | CLEAR/RESET net.ipv4.tcp_wmem
+  become: true
   sysctl:
     name: net.ipv4.tcp_wmem
     state: absent
 
 - name: sysctl | CLEAR/RESET net.ipv4.udp_wmem_min
+  become: true
   sysctl:
     name: net.ipv4.udp_wmem_min
     state: absent
 
 - name: sysctl | CLEAR/RESET net.ipv4.tcp_max_tw_buckets
+  become: true
   sysctl:
     name: net.ipv4.tcp_max_tw_buckets
     state: absent
 
 - name: sysctl | CLEAR/RESET net.ipv4.tcp_tw_recycle
+  become: true
   sysctl:
     name: net.ipv4.tcp_tw_recycle
     state: absent
 
 - name: sysctl | CLEAR/RESET net.ipv4.tcp_tw_reuse
+  become: true
   sysctl:
     name: net.ipv4.tcp_tw_reuse
     state: absent
