--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 sudo: required
 
 env:
-  - DOCKER_CMD_OPT="--rm --privileged --cap-add=ALL -v /tmp:/tmp -v /sys/fs/cgroup:/sys/fs/cgroup:ro -t ansible-debian"
+  - DOCKER_CMD_EXT_OPT="--rm --privileged --cap-add=ALL -v /tmp:/tmp -v /sys/fs/cgroup:/sys/fs/cgroup:ro"
 
 language: python
 
@@ -29,7 +29,7 @@ script:
         for r in ${ROLES}; do
             printf "========== Run %s / %s (%s) ==========\n" "${START}" "${TOTAL}" "${r}";
             max=10; i=0; while [ $i -lt $max ]; do
-                if docker run ${DOCKER_CMD_OPT} -e MY_HOST=${dist} -e tag=${r} ; then
+                if docker run ${DOCKER_CMD_EXT_OPT} -e MY_HOST=${dist} -e tag=${r} -t ansible-debian; then
                     break;
                 else
                     i=$((i+1));
@@ -39,7 +39,8 @@ script:
             START=$((START+1));
         done;
     else
-        docker run ${DOCKER_CMD_OPT} -e MY_HOST=${dist} -e random=${random} ;
+        docker run ${DOCKER_CMD_EXT_OPT} -e MY_HOST=${dist} -e random=${random} -t ansible-debian;
     fi
 
   - docker system prune -f
+
